# RustProjects

todo-app/: .env.example  .gitignore  README.md
todo-app/backend/: .env  .gitignore  Cargo.toml  todos.db
todo-app/backend/migrations/: 001_initial.sql
todo-app/backend/src/: auth.rs  main.rs  models.rs
todo-app/frontend/: .gitignore  Cargo.toml  index.html
todo-app/frontend/src/: main.rs  types.rs
todo-app/frontend/src/components/: auth.rs  mod.rs  todolist.rs
todo-app/frontend/src/services/: api.rs  auth.rs
