[package]
name = "todo-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.4"
gloo-storage = "0.3"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "Storage",
  "Window",
  "Location",
]